# FLAME-interpreter

./: .gitignore  CMakeLists.txt  ast.c  ast.h  example.flame  main.c
evaluator/: evaluator.c  evaluator.h
parse/: cst.c  cst.h  parse.c  parse.h
statements/: print.c  print.h  statement.c  statement.h
stdlib/: add.c  add.h  clear.c  clear.h  eval.c  eval.h  exit.c  exit.h  print.c  print.h  stdlib.c  stdlib.h
symbols/: literal.c  literal.h  operator.c  operator.h  repository.c  repository.h  symbol.h
utils/: logger.c  logger.h  type.c  type.h
